--- a/update.html
+++ b/update.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Docker Image Registry</title>
+    <title>MDACA Product Image Releases</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <h1 class="mt-5">Docker Image Registry</h1>
+
+        <!-- Add the image below the heading -->
+        <img src="https://github.com/stevensrtw/docker-image-versions/blob/main/logo.png?raw=true" alt="Logo" class="img-fluid" />
+
         <input class="form-control mt-3 mb-3" id="search" placeholder="Search for Docker images..." onkeyup="searchTable()">
         
         <table class="table table-bordered table-hover">
@@ -16,21 +20,23 @@
                 <tr>
                     <th>Image Name</th>
                     <th>Version</th>
+					<th>Date of Relase</th>
                     <th>Manifest</th>
                 </tr>
             </thead>
             <tbody id="dockerTable">
                 <tr>
-                    <td>my-app</td>
-                    <td>1.0.0</td>
-                    <td><button class="btn btn-primary" onclick="showManifest('my-app')">View Manifest</button></td>
+                    <td>jupyter-hub</td>
+                    <td>5.1.0.0</td>
+					<td>September 23, 2024</th>
+                    <td><button class="btn btn-primary" onclick="showManifest('jupyter-hub')">View Manifest</button></td>
                 </tr>
                 <tr>
-                    <td>my-db</td>
-                    <td>2.3.1</td>
-                    <td><button class="btn btn-primary" onclick="showManifest('my-db')">View Manifest</button></td>
+                    <td>jupyter-http-proxy</td>
+                    <td>4.6.2</td>
+					<td>September 30, 2024</th>
+                    <td><button class="btn btn-primary" onclick="showManifest('jupyter-http-proxy')">View Manifest</button></td>
                 </tr>
-                <!-- Add more images here -->
             </tbody>
         </table>
     </div>
@@ -51,10 +57,9 @@
     </div>
 
     <script>
-        // Example manifest data
         const manifests = {
-            'my-app': '{ "schemaVersion": 2, "config": { "digest": "sha256:abc123", "mediaType": "application/vnd.docker.container.image.v1+json" } }',
-            'my-db': '{ "schemaVersion": 2, "config": { "digest": "sha256:def456", "mediaType": "application/vnd.docker.container.image.v1+json" } }',
+            'jupyter-hub': '{ "schemaVersion": 2, "config": { "digest": "sha256:abc123", "mediaType": "application/vnd.docker.container.image.v1+json" } }',
+            'jupyter-http-proxy': '{ "schemaVersion": 2, "config": { "digest": "sha256:def456", "mediaType": "application/vnd.docker.container.image.v1+json" } }',
         };
 
         function showManifest(imageName) {
@@ -62,7 +67,6 @@
             new bootstrap.Modal(document.getElementById('manifestModal')).show();
         }
 
-        // Search table function
         function searchTable() {
             const input = document.getElementById('search').value.toUpperCase();
             const table = document.getElementById('dockerTable');
@@ -70,14 +74,4 @@
 
             for (let i = 0; i < tr.length; i++) {
                 const td = tr[i].getElementsByTagName('td')[0];
-                if (td) {
-                    const txtValue = td.textContent || td.innerText;
-                    tr[i].style.display = txtValue.toUpperCase().indexOf(input) > -1 ? '' : 'none';
-                }
-            }
-        }
-    </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+                if (td
