--- a/update.html
+++ b/update.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDACA Product Image Releases</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1 class="mt-5">Docker Image Registry</h1>
+        <h1 class="mt-5">MDACA Image Releases</h1>
 
         <!-- Add the image below the heading -->
         <img src="https://github.com/stevensrtw/docker-image-versions/blob/main/logo.png?raw=true" alt="Logo" class="img-fluid" />
@@ -20,7 +22,7 @@
                 <tr>
                     <th>Image Name</th>
                     <th>Version</th>
-					<th>Date of Relase</th>
+                    <th>Date of Release</th>
                     <th>Manifest</th>
                 </tr>
             </thead>
@@ -28,13 +30,13 @@
                 <tr>
                     <td>jupyter-hub</td>
                     <td>5.1.0.0</td>
-					<td>September 23, 2024</th>
+                    <td>September 23, 2024</td>
                     <td><button class="btn btn-primary" onclick="showManifest('jupyter-hub')">View Manifest</button></td>
                 </tr>
                 <tr>
                     <td>jupyter-http-proxy</td>
                     <td>4.6.2</td>
-					<td>September 30, 2024</th>
+                    <td>September 30, 2024</td>
                     <td><button class="btn btn-primary" onclick="showManifest('jupyter-http-proxy')">View Manifest</button></td>
                 </tr>
             </tbody>
@@ -74,4 +76,12 @@
 
             for (let i = 0; i < tr.length; i++) {
                 const td = tr[i].getElementsByTagName('td')[0];
-                if (td
+                if (td) {
+                    const txtValue = td.textContent || td.innerText;
+                    tr[i].style.display = txtValue.toUpperCase().indexOf(input) > -1 ? "" : "none";
+                }       
+            }
+        }
+    </script>
+</body>
+</html>
